Fix search position - align to left

--- a/src/sass/_theme_layout.sass
+++ b/src/sass/_theme_layout.sass
@@ -410,6 +410,9 @@ footer
 .genindextable li > ul
   margin-left: $base-line-height
 
+#rtd-search-form
+  text-align: left
+
 +media($tablet)
   #rtd-search-form
     display: flex
